--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,16 @@ Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
 Flask-SQLAlchemy==3.1.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 PyJWT==2.10.1
+pytest==8.3.5
+pytest-flask==1.3.0
 python-dotenv==1.1.0
 redis==6.0.0
 requests==2.32.3
